transitioning into typescript

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             </div>
         </div>
     </div>
-    <script src="./main.js"></script>
+    <script src="./built/main.js"></script>
 </body>
 </html>
